--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -91,8 +91,8 @@
 </div>
 
 <div class="popup popup-reports d-flex flex-column" *ngIf="showReportMenu">
-  <span (click)="onStandarsReport()" >Standard Reports</span>
-  <span>Custom Reports</span>
+  <span (click)="onStandardReport()">Standard Reports</span>
+  <span (click)="onCustomReport()">Custom Reports</span>
 </div>
 
 <div class="popup popup-info p-3 d-flex flex-column" *ngIf="showInfoPopup">
