--- a/src/app/post-login/components/custom-reports/custom-reports.component.scss
+++ b/src/app/post-login/components/custom-reports/custom-reports.component.scss
@@ -44,6 +44,24 @@ select:focus {
   transition: all 0.4s;
 }
 
+.clear-section-section {
+  height: 100%;
+  padding: 5px 20px;
+  height: 32px;
+  cursor: pointer;
+  border-radius: 7px;
+}
+
+.clear-section-txt {
+  margin-right: 11.1px;
+  font-size: 14px;
+  color: #444;
+}
+
+.clear-section-section:hover {
+  background-color: rgba( #a8becc, 0.2);
+}
+
 .input-container {
   position: relative;
   & input {
@@ -83,15 +101,16 @@ select:focus {
     border-radius: 0;
   }
 
-  & .clicked {
+  & .download-btn {
     background: #083754;
     color: #fff;
     font-weight: normal;
     line-height: 32px;
+    margin-left: 26px;
   }
 }
 
-::ng-deep .selected-section .k-button-text {
+:host ::ng-deep .selected-section .k-button-text {
   margin-left: 11px;
 }
 
@@ -99,11 +118,11 @@ select:focus {
   margin-top: 18px;
 }
 
-::ng-deep .action-buttons {
+:host ::ng-deep .action-buttons {
   padding-bottom: 0;
 }
 
-::ng-deep .gap-10 {
+:host ::ng-deep .gap-10 {
   gap: 10px !important;
 
   @media (max-width: 1220px) {
@@ -111,7 +130,7 @@ select:focus {
   }
 }
 
-::ng-deep .tag-text {
+:host ::ng-deep .tag-text {
   margin: 0;
   border-radius: 5px;
   background: #d9d9d9;
@@ -128,7 +147,7 @@ select:focus {
   margin-bottom: -15px !important;
 }
 
-::ng-deep .custom-report-table {
+:host ::ng-deep .custom-report-table {
   & .ag-ltr .ag-header-cell::after {
     display: none;
   }
@@ -159,7 +178,7 @@ select:focus {
   & .ag-ltr .ag-selection-checkbox,
   & .ag-ltr .ag-header-select-all {
     padding-left: 5px !important;
-    margin-right: 16px;
+    margin-right: 30px;
   }
 
   & .ag-row-odd {
@@ -194,7 +213,7 @@ select:focus {
 }
 
 // REPORT NAME WITH SMALL-TEXT //
-::ng-deep {
+:host ::ng-deep {
   .bedge {
     border-radius: 5px;
     background: #227fed;
@@ -228,7 +247,7 @@ select:focus {
 }
 
 // ACTION COLUMN //
-::ng-deep {
+:host ::ng-deep {
   .action-container {
     display: flex;
     flex-direction: column;
@@ -247,7 +266,7 @@ select:focus {
 }
 
 // SORTING ICONS //
-::ng-deep .custom-report-table .ag-icon-desc {
+:host ::ng-deep .custom-report-table .ag-icon-desc {
   margin-top: -7px;
   &::before {
     content: url("/assets/images/down-arrow.svg");
@@ -255,7 +274,7 @@ select:focus {
   }
 }
 
-::ng-deep .custom-report-table .ag-icon-asc {
+:host ::ng-deep .custom-report-table .ag-icon-asc {
   margin-top: -7px;
   &::before {
     content: url("/assets/images/up-arrow.svg");
@@ -298,7 +317,7 @@ select:focus {
   min-width: 600px !important;
 }
 
-::ng-deep {
+:host ::ng-deep {
   .ag-pinned-right-cols-container {
     min-width: 140px !important;
   }
@@ -324,11 +343,17 @@ select:focus {
   .report-period {
     display: flex;
     justify-content: center;
+    width: fit-content !important;
   }
 
   .added-on {
     justify-content: center;
+    width: fit-content !important;
   }
+}
+
+:host ::ng-deep .ag-header-cell-menu-button {
+  margin-left: 10px;
 }
 
 // SCROLLBAR //
@@ -419,6 +444,10 @@ select:focus {
   }
 }
 
+:host ::ng-deep .ag-header-cell-comp-wrapper {
+  width: fit-content;
+}
+
 .resetButton {
   position: absolute;
   background-color: #f7f7f7;
@@ -426,7 +455,7 @@ select:focus {
   height: 48px;
   width: 85.5%;
   border: 0;
-  font-size: 14px;
+  font-size: 16px;
   color: #0a4569;
   font-weight: 700;
   top: 0;
@@ -438,11 +467,11 @@ select:focus {
 }
 
 // CUSTOM CHECKBOX //
-::ng-deep .ag-checkbox-input-wrapper .ag-checked {
+:host ::ng-deep .ag-checkbox-input-wrapper .ag-checked {
   font-size: 20px !important;
 }
 
-::ng-deep .ag-checkbox-input-wrapper.ag-checked::after {
+:host ::ng-deep .ag-checkbox-input-wrapper.ag-checked::after {
   display: block;
   content: url("data:image/svg+xml;charset=UTF-8, <svg xmlns='http://www.w3.org/2000/svg' fill='none'  viewBox='0 0 24 24' stroke-width='3' stroke='white' class='w-6 h-6'> <path stroke-linecap='round' stroke-linejoin='round' d='M4.5 12.75l6 6 9-13.5' class='icons' /></svg>");
   background-size: 28px 28px !important;
@@ -453,7 +482,7 @@ select:focus {
   margin-top: -2px;
 }
 
-::ng-deep .ag-checkbox-input {
+:host ::ng-deep .ag-checkbox-input {
   appearance: none;
   -webkit-appearance: none;
 
@@ -477,12 +506,12 @@ select:focus {
   border-radius: 2px;
   margin-top: -4px;
 }
-::ng-deep .ag-checkbox .ag-input-wrapper {
+:host ::ng-deep .ag-checkbox .ag-input-wrapper {
   border: none;
   box-shadow: none;
 }
 
-::ng-deep .ag-checkbox-input-wrapper::after {
+:host ::ng-deep .ag-checkbox-input-wrapper::after {
   display: none;
 }
 
@@ -518,7 +547,7 @@ select:focus {
   }
 }
 
-::ng-deep .hide-header-text {
+:host ::ng-deep .hide-header-text {
   display: none;
 }
 
@@ -535,7 +564,7 @@ select:focus {
   }
 }
 
-::ng-deep {
+:host ::ng-deep {
   .ag-side-button-label,
   .ag-tool-panel-wrapper,
   .ag-group-title {
@@ -549,15 +578,15 @@ select:focus {
   }
 }
 
-::ng-deep .ag-tool-panel-wrapper {
+:host ::ng-deep .ag-tool-panel-wrapper {
   border-top: 1px solid rgb(189, 195, 199);
 }
 
-::ng-deep .ag-column-panel-column-select {
+:host ::ng-deep .ag-column-panel-column-select {
   border-top: none;
 }
 
-::ng-deep .ag-checkbox-input {
+:host ::ng-deep .ag-checkbox-input {
   appearance: none;
   -webkit-appearance: none;
   &:checked {
