--- a/src/app/post-login/components/standard-reports/standard-reports.component.html
+++ b/src/app/post-login/components/standard-reports/standard-reports.component.html
@@ -17,44 +17,24 @@
         (input)="onFilterTextBoxChanged()"
         kendoTextBox
       />
-      <div class="selected-reports" *ngIf="selectedRowCount > 0">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="18"
-          height="18"
-          viewBox="0 0 18 18"
-          fill="none"
-        >
-          <path
-            d="M8.9336 16.8672C13.3152 16.8672 16.8672 13.3152 16.8672 8.9336C16.8672 4.55199 13.3152 1 8.9336 1C4.55199 1 1 4.55199 1 8.9336C1 13.3152 4.55199 16.8672 8.9336 16.8672Z"
-            stroke="#878787"
-            stroke-width="1.64004"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M11.3136 12.1069L6.55347 5.76001"
-            stroke="#878787"
-            stroke-width="1.64004"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M6.55347 12.1069L11.3136 5.76001"
-            stroke="#878787"
-            stroke-width="1.64004"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-        </svg>
-        <span>{{ selectedRowCount }} selected</span>
-        <button
-          kendoButton
-          class="btn-download"
-          imageUrl="/assets/images/material-symbols_download.svg"
-        >
-          Download
-        </button>
+      <div
+        class="d-flex selected-reports justify-content-between"
+        *ngIf="selectedRowCount > 0"
+      >
+        <div>
+          <span>{{ selectedRowCount }} selected</span>
+          <button
+            kendoButton
+            class="btn-download"
+            imageUrl="/assets/images/material-symbols_download.svg"
+          >
+            Download
+          </button>
+        </div>
+        <div class="clear-section-section" (click)="onClearSection()">
+          <span class="clear-section-txt">Clear Selection</span>
+          <img src="assets/images/xbox-icon.png" />
+        </div>
       </div>
       <div class="reports-data d-flex">
         <ag-grid-angular
