Lead-routing changes done

--- a/src/app/post-login/components/custom-reports/custom-reports.component.html
+++ b/src/app/post-login/components/custom-reports/custom-reports.component.html
@@ -37,9 +37,7 @@
     *ngIf="selectedRowCount > 0"
   >
     <div>
-      <kendo-button class="buttons" width="16" height="16"
-        >{{ selectedRowCount }} selected</kendo-button
-      >
+      <span>{{ selectedRowCount }} rows selected</span>
       <kendo-button
         imageUrl="assets/images/download-icon.svg"
         class="buttons download-btn"
