--- a/src/app/post-login/components/dialog/dialog.component.scss
+++ b/src/app/post-login/components/dialog/dialog.component.scss
@@ -72,7 +72,7 @@
 }
 
 
-:host ::ng-deep .k-dialog-wrapper .k-window {
+::ng-deep .k-dialog-wrapper .k-window {
   width: 752px !important;
   height: 518px !important ;
 }
