--- a/src/app/post-login/components/lead-routing/lead-routing.component.html
+++ b/src/app/post-login/components/lead-routing/lead-routing.component.html
@@ -35,11 +35,11 @@
     *ngIf="selectedRowCount > 0"
   >
     <div>
-      <span>{{ selectedRowCount }} selected</span>
+      <span>{{ selectedRowCount }} rows selected</span>
       <button
         kendoButton
         class="btn-deactivate"
-        imageUrl="/assets/images/material-symbols_download.svg"
+        imageUrl="assets/images/deactivate-icon.svg"
       >
         Deactivate
       </button>
