--- a/src/app/post-login/components/standard-reports/standard-reports.component.html
+++ b/src/app/post-login/components/standard-reports/standard-reports.component.html
@@ -22,7 +22,7 @@
         *ngIf="selectedRowCount > 0"
       >
         <div>
-          <span>{{ selectedRowCount }} selected</span>
+          <span>{{ selectedRowCount }} rows selected</span>
           <button
             kendoButton
             class="btn-download"
