--- a/src/app/post-login/components/standard-reports/standard-reports.component.scss
+++ b/src/app/post-login/components/standard-reports/standard-reports.component.scss
@@ -58,8 +58,8 @@
       width: 67px;
       height: 32px;
       font-size: 14px;
-      font-weight: 400;
-      color: #878787 !important;
+      font-weight: 600;
+      color: #444 !important;
       margin-left: 11.13px;
     }
 
@@ -423,6 +423,12 @@
 :host ::ng-deep {
   .ag-pinned-right-cols-container {
     min-width: 125px !important;
+    min-width: 140px !important;
+    max-width: unset !important;
+  }
+
+  & .ag-ltr .ag-body-vertical-scroll.ag-scrollbar-invisible {
+    right: 6px;
   }
 
   .ag-pinned-right-header {
@@ -484,12 +490,16 @@
   font-weight: 400;
 }
 
+:host ::ng-deep .ag-paging-row-summary-panel {
+  display: none;
+}
+
 .resetButton {
   position: absolute;
   background-color: #f7f7f7;
   border-right: 1px solid rgb(189, 195, 199) !important;
   height: 47px;
-  width: 85.5%;
+  width: 86%;
   letter-spacing: 1px;
   border: 0;
   font-size: 15px;
@@ -505,7 +515,7 @@
 
 .clear-section-section {
   height: 100%;
-  padding: 5px 20px;
+  padding: 4px 20px;
   height: 32px;
   cursor: pointer;
   border-radius: 7px;
@@ -515,10 +525,11 @@
   margin-right: 11.1px;
   font-size: 14px;
   color: #444;
+  font-weight: 300 !important;
 }
 
 .clear-section-section:hover {
-  background-color: rgba( #a8becc, 0.2);
+  background-color: rgba(#a8becc, 0.2);
 }
 
 :host ::ng-deep .ag-tool-panel-wrapper {
@@ -541,7 +552,9 @@
     line-height: 16px;
   }
   .ag-side-buttons {
-    margin: 12px 0 0 8px;
+    padding-top: 0;
+    margin-top: -35px;
+    margin-left: 7px;
   }
 
   .ag-side-button .ag-icon-columns::before {
