--- a/src/app/post-login/components/profile/profile.component.html
+++ b/src/app/post-login/components/profile/profile.component.html
@@ -74,7 +74,9 @@
         >
           Save
         </button>
-        <a class="reset-pass" routerLink="/reset-password" href="http://">Reset your password via email</a>
+        <a class="reset-password"
+          >Reset your password via email</a
+        >
       </div>
     </fieldset>
   </form>
