--- a/src/app/post-login/components/custom-reports/custom-reports.component.scss
+++ b/src/app/post-login/components/custom-reports/custom-reports.component.scss
@@ -31,8 +31,14 @@ select:focus {
 
   @media (min-width: 1920px) {
     width: 1694px !important;
-    margin: 40px auto !important;
+    margin: 33px auto 42px !important;
   }
+}
+
+.append-container{
+  width: 500px;
+  margin: 0 auto;
+  min-height: 0 !important;
 }
 
 .section-header {
@@ -42,6 +48,12 @@ select:focus {
   font-weight: 700;
   line-height: 32px;
   transition: all 0.4s;
+  // margin-top: 33px !important;
+
+  // @media (min-width: 1920px) {
+  //   margin-top: 40px !important;
+  // }
+
 }
 
 .clear-section-section {
@@ -85,14 +97,13 @@ select:focus {
 
 .selected-section {
   margin-top: 18px;
-  padding: 8px 31px;
+  padding: 8px 16px;
   border: 1px solid #d0d0d0;
   background: #f5f5f5;
   font-size: 14px;
   gap: 26px;
 
   span {
-    margin-left: 20px;
     font-weight: 600;
     color: #444 !important;
   }
@@ -100,7 +111,6 @@ select:focus {
   & .buttons {
     border: none;
     color: #878787;
-    font-family: "Helvetica Neue";
     font-weight: 500;
     line-height: 32px;
     height: 32px;
@@ -403,35 +413,6 @@ select:focus {
   background-color: transparent;
   padding-right: 16px;
 }
-
-// DOWNLOAD NOTIFICATION //
-.toast-message {
-  background-color: #237b4b;
-  padding: 10px 10px 10px 16px;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  gap: 4px;
-  align-items: center;
-  width: 519px;
-}
-
-.message-text {
-  color: #fff;
-  font-family: Helvetica;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 20px;
-
-  & span {
-    color: rgba(255, 255, 255, 0.6);
-    font-family: Helvetica;
-    font-size: 10px;
-  }
-}
-
 .custom-margin {
   margin-top: 40px !important;
   transition: all 0.5s;
@@ -465,6 +446,7 @@ select:focus {
   border-right: 1px solid rgb(189, 195, 199) !important;
   height: 48px;
   width: 86%;
+  font-family: "Helvetica Neue";
   border: 0;
   font-size: 16px;
   color: #0a4569;
