--- a/src/app/post-login/components/dialog/dialog.component.html
+++ b/src/app/post-login/components/dialog/dialog.component.html
@@ -1,65 +1,50 @@
-
-  <div class="container">
-    <div class="d-flex flex-row-reverse">
-      <a class="btn cursor-pointer" (click)="dailogRef.close()">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none"  stroke="#555"   
-      viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon" >
-          <path stroke-linecap="round" stroke-linejoin="round" d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-        </svg>
-        
-        <!-- <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="20.28"
-          height="20.28"
-          fill="currentColor"
-          stroke="#555"
-          class="bi bi-x-circle"
-          viewBox="0 0 16 16"
-          style="font-weight: bold"
-        >
-          <path
-            d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
-          />
-          <path
-            d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"
-          />
-        </svg> -->
-      </a>
-    </div>
-
-    <h1 class="dialog-title">Select an account</h1>
-
-    <div class="grid-layout-container">
-      <kendo-gridlayout
-        [cols]="[{width: 170}, {width: 170}, {width: 170}]"
-        [gap]="{ rows: 0, cols: 22 }"
-        class="bg-white text-dark"
+<div class="container">
+  <div class="d-flex flex-row-reverse">
+    <a class="btn cursor-pointer" (click)="dailogRef.close()">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        stroke="#555"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="icon"
       >
-          <kendo-gridlayout-item class="card-box">
-            <div *ngFor="let client of clientList; let i = index" class="column">
-              <kendo-card
-                width="170px"
-                style="height: 194px; border-radius: 1px; margin-bottom: 20px"
-              >
-                <kendo-card-body class="card-body">
-                  <div class="img-box">
-                    <img
-                      src="{{ client.imgSrc }}"
-                      [class]="'img-card'"
-                    />
-                  </div>
-                  <div class="cmp-title">
-                    {{ client.clientName }}
-                  </div>
-                </kendo-card-body>
-              
-              </kendo-card>
-              <button kendoButton class="btn-select ">select</button>
-             
-            </div>
-          
-          </kendo-gridlayout-item>
-      </kendo-gridlayout>
-    </div>
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+        />
+      </svg>
+    </a>
   </div>
 
+  <h1 class="dialog-title">Select an account</h1>
+
+  <div class="grid-layout-container">
+    <kendo-gridlayout
+      [cols]="[{ width: 170 }, { width: 170 }, { width: 170 }]"
+      [gap]="{ rows: 0, cols: 22 }"
+      class="bg-white text-dark"
+    >
+      <kendo-gridlayout-item class="card-box">
+        <div *ngFor="let client of clientList; let i = index" class="column">
+          <kendo-card
+            width="170px"
+            style="height: 194px; border-radius: 1px; margin-bottom: 20px"
+          >
+            <kendo-card-body class="card-body">
+              <div class="img-box">
+                <img src="{{ client.imgSrc }}" [class]="'img-card'" />
+              </div>
+              <div class="cmp-title">
+                {{ client.clientName }}
+              </div>
+            </kendo-card-body>
+          </kendo-card>
+          <button kendoButton class="btn-select">select</button>
+        </div>
+      </kendo-gridlayout-item>
+    </kendo-gridlayout>
+  </div>
+</div>
