Added profile page pop up and edit lead routing

--- a/src/app/post-login/components/custom-reports/custom-reports.component.html
+++ b/src/app/post-login/components/custom-reports/custom-reports.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
   <div class="append-container" #container></div>
 
-  <h1 class="section-header" [class.custom-margin]="showToast">
+  <h1 class="section-header">
     Custom Reports
   </h1>
 
