--- a/src/app/post-login/components/profile/profile.component.scss
+++ b/src/app/post-login/components/profile/profile.component.scss
@@ -66,33 +66,31 @@
   }
 }
 
-::ng-deep kendo-dialog-actions {
-  button:first-child{
-    position: absolute;
-    background-color: red;
-    top: 181px;
-    left: 100px;
-    border: 1px solid #0a4569;
-    color: #0a4569;
-    font-size: 16px;
-    font-weight: bold;
-    width: 348px;
-    height: 52px;
-    background-color: #fff;
-    text-transform: uppercase;
-  }
+.btn-cancel {
+  position: absolute;
+  background-color: red;
+  top: 181px;
+  left: 100px;
+  border: 1px solid #0a4569;
+  color: #0a4569;
+  font-size: 16px;
+  font-weight: bold;
+  width: 348px;
+  height: 52px;
+  background-color: #fff;
+  text-transform: uppercase;
+}
 
-  button:nth-child(2) {
-    position: absolute;
-    font-family: Helvetica;
-    background-color: #0a4569;
-    color: #fff;
-    width: 348px;
-    font-weight: bold;
-    height: 52px;
-    text-transform: uppercase;
-    border: none;
-    left: 100px;
-    top: 275px;
-  }
+.btn-reset {
+  position: absolute;
+  font-family: Helvetica;
+  background-color: #0a4569;
+  color: #fff;
+  width: 348px;
+  font-weight: bold;
+  height: 52px;
+  text-transform: uppercase;
+  border: none;
+  left: 100px;
+  top: 275px;
 }
