--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -27,7 +27,7 @@
               >
             </div>
 
-            <div>
+            <div class="reports-container">
               <a
                 kendo-link
                 (click)="showReportOptions($event)"
@@ -36,6 +36,13 @@
               >
                 Reports
                 <span class="arrow"></span>
+                <div
+                  class="popup popup-reports d-flex flex-column"
+                  *ngIf="showReportMenu"
+                >
+                  <span (click)="onStandardReport()">Standard Reports</span>
+                  <span (click)="onCustomReport()">Custom Reports</span>
+                </div>
               </a>
             </div>
 
@@ -54,28 +61,63 @@
           <!-- Profile info -->
           <div class="d-flex gap-3 align-self-center profile-btns">
             <div class="d-flex gap-3 align-self-center profile-btns">
-              <button
-                kendoButton
-                class="align-self-center action-btn popup-btn border rounded-circle text-primary-emphasis bg-light info-btn"
-                (click)="showInfoBtn($event)"
-                [ngClass]="{ active: showInfoPopup }"
-              >
-                ?
-              </button>
-              <div class="d-flex  profile-btn-container"   (click)="showProfileBtn($event)">
+              <div class="info-container">
                 <button
                   kendoButton
-                  class="action-btn popup-btn border rounded-circle text-md text-white bg-info profile-btn"
-              
-                  [ngClass]="{ active: showProfileMenu }"
+                  class="align-self-center action-btn popup-btn border rounded-circle text-primary-emphasis bg-light info-btn"
+                  (click)="showInfoBtn($event)"
+                  [ngClass]="{ active: showInfoPopup }"
                 >
-                  JV
-                  
+                  ?
                 </button>
-                <a class="link profile-link" 
-                  >
-                   Sunrise Senior Living</a
+                <div
+                  class="popup popup-info p-3 d-flex flex-column"
+                  *ngIf="showInfoPopup"
                 >
+                  <div class="info-border-bottom border-bottom mb-2">
+                    <span> Need more help? </span>
+                  </div>
+                  <div class="text-secondary text-sm mb-2">
+                    Your Client Success Manager is
+                  </div>
+                  <div class="d-flex align-items-center gap-3 personal-content">
+                    <img
+                      src="assets/images/user-1.png"
+                      class="border border-primary rounded-circle"
+                    />
+                    <div class="d-flex flex-column">
+                      <div class="text-md user-name font-weight-bold">
+                        Kim Armstrong
+                      </div>
+                      <div class="text-primary email">
+                        Kim.armstring@robbrik.com
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="profile-container">
+                <div
+                  class="d-flex profile-btn-container"
+                  (click)="showProfileBtn($event)"
+                >
+                  <button
+                    kendoButton
+                    class="action-btn popup-btn border rounded-circle text-md text-white bg-info profile-btn"
+                    [ngClass]="{ active: showProfileMenu }"
+                  >
+                    JV
+                  </button>
+                  <a class="link profile-link"> Sunrise Senior Living</a>
+                  <div
+                    class="popup popup-profile d-flex flex-column"
+                    *ngIf="showProfileMenu"
+                  >
+                    <span routerLink="/dashboard/profile"> Profile</span>
+                    <span (click)="onSelectAccount()">Switch Account</span>
+                    <span>Sign Out</span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -88,32 +130,4 @@
       </kendo-appbar-section>
     </kendo-appbar-section>
   </div>
-</div>
-
-<div class="popup popup-reports d-flex flex-column" *ngIf="showReportMenu">
-  <span (click)="onStandardReport()">Standard Reports</span>
-  <span (click)="onCustomReport()">Custom Reports</span>
-</div>
-
-<div class="popup popup-info p-3 d-flex flex-column" *ngIf="showInfoPopup">
-  <div class="info-border-bottom border-bottom mb-2">
-    <span> Need more help? </span>
-  </div>
-  <div class="text-secondary text-sm mb-2">Your Client Success Manager is</div>
-  <div class="d-flex align-items-center gap-3 personal-content">
-    <img
-      src="assets/images/user-1.png"
-      class="border border-primary rounded-circle"
-    />
-    <div class="d-flex flex-column">
-      <div class="text-md user-name font-weight-bold">Kim Armstrong</div>
-      <div class="text-primary email">Kim.armstring@robbrik.com</div>
-    </div>
-  </div>
-</div>
-
-<div class="popup popup-profile d-flex flex-column" *ngIf="showProfileMenu">
-  <span routerLink="/dashboard/profile"> Profile</span>
-  <span (click)="onSelectAccount()">Switch Account</span>
-  <span>Sign Out</span>
 </div>
